# ss

./: main.py  pyproject.toml
.ipynb_checkpoints/: Tabular-checkpoint.ipynb
Classification/: Classification.ipynb  Classificationa.html
Classification/.ipynb_checkpoints/: Classification-checkpoint.ipynb
HandsOn/: 02_end_to_end_machine_learning_project.ipynb
HandsOn/.ipynb_checkpoints/: 02_end_to_end_machine_learning_project-checkpoint.ipynb
HousingPriceKaggle/: HousingPrices.ipynb  submission.csv  submission2.csv
HousingPriceKaggle/.ipynb_checkpoints/: internet_house-regression-checkpoint.ipynb
TimeSeries1/: how-to-use-sarimax.ipynb  time-series-forecasting-with-machine-learning-yt.html  time-series-forecasting-with-machine-learning-yt.ipynb
TimeSeriesBaguette/: baguette.ipynb
TimeSeriesBaguette/.ipynb_checkpoints/: baguette-checkpoint.ipynb
TimeSeriesBaguette/data/: 7NAUFS_Divers_26APR2026.ics
TimeSeriesClaude/: time_series_ml_pipeline.ipynb
TimeSeriesIndiaStock/: time-series-analysis.ipynb
