[project]
name = "steppingstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.7"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.2.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.0.3",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "xgboost>=2.1.4",
]
